integration_tests/codegen_fail/fail/union/trait_same_type_ugly.stderr
error[E0119]: conflicting implementations of trait `<(dyn Character + std::marker::Send + std::marker::Sync + '__obj) as juniper::GraphQLUnion<__S>>::mark::_::{closure#0}::MutuallyExclusive` for type `std::string::String`:
 --> $DIR/trait_same_type_ugly.rs:3:1
  |
3 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `std::string::String`
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
